[workspace]
resolver = "2"
members = [
    ".readme",
    "argon2",
    "balloon-hash",
    "bcrypt-pbkdf",
    "password-auth",
    "pbkdf2",
    "scrypt",
    "sha-crypt",
    "yescrypt"
]
exclude = ["benches", "fuzz"]

[profile.dev]
opt-level = 2

[patch.crates-io.password-hash]
git = "https://github.com/RustCrypto/traits"
