[workspace]
resolver = "2"
members = [
    ".readme",
    "argon2",
    "balloon-hash",
    "bcrypt-pbkdf",
    "password-auth",
    "pbkdf2",
    "scrypt",
    "sha-crypt",
    "yescrypt"
]
exclude = ["benches", "fuzz"]

[profile.dev]
opt-level = 2

[patch.crates-io]
argon2 = { path = "./argon2" }
pbkdf2 = { path = "./pbkdf2" }
scrypt = { path = "./scrypt" }

mcf = { git = "https://github.com/RustCrypto/formats", branch = "base64ct/pbkdf2-alphabet" }
