workspace.members = ["."]

[package]
name = "readme"
description = "rustdoc tests for toplevel README.md"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
password-hash = "0.5"
argon2 = { path = "../argon2" }
pbkdf2 = { path = "../pbkdf2", features = ["simple"] }
scrypt = { path = "../scrypt" }
