[package]
name = "readme"
description = "rustdoc tests for toplevel README.md"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
password-hash = "0.6.0-rc.3"
argon2 = { path = "../argon2" }
pbkdf2 = { path = "../pbkdf2", features = ["password-hash"] }
scrypt = { path = "../scrypt", features = ["phc"] }
