[package]
name = "balloon-hash"
version = "0.5.0-rc.5"
description = "Pure Rust implementation of the Balloon password hashing function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/balloon-hash"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/balloon-hash"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
digest = { version = "0.11", default-features = false }
crypto-bigint = { version = "0.7", default-features = false, features = ["hybrid-array"] }

# optional dependencies
kdf = { version = "0.1", optional = true }
password-hash = { version = "0.6", optional = true, default-features = false, features = ["phc"] }
rayon = { version = "1.7", optional = true }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "1"
sha2 = "0.11"

[features]
default = ["alloc", "getrandom", "password-hash"]
alloc = ["password-hash/alloc"]

kdf = ["alloc", "dep:kdf"]
getrandom = ["password-hash/getrandom"]
parallel = ["dep:rayon"]
password-hash = ["dep:password-hash"]
rand_core = ["password-hash/rand_core"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
all-features = true
