[package]
name = "bcrypt-pbkdf"
version = "0.11.0-pre.1"
description = "bcrypt-pbkdf password-based key derivation function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bcrypt-pbkdf"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/bcrypt-pbkdf"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
edition = "2021"
rust-version = "1.81"

[dependencies]
blowfish = { version = "=0.10.0-pre.2", features = ["bcrypt"] }
pbkdf2 = { version = "=0.13.0-pre.1", default-features = false, path = "../pbkdf2" }
sha2 = { version = "=0.11.0-pre.4", default-features = false }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "1.0.0"

[features]
default = ["alloc", "std"]
alloc = []
std = []
zeroize = ["dep:zeroize"]
