[package]
name = "scrypt-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
base16ct = { version = "0.2", features = ["alloc"] }
scrypt = { path = "../scrypt", features = ["simple"]}

[[bin]]
name = "scrypt_fuzzer"
path = "fuzz_targets/scrypt_fuzzer.rs"
test = false
doc = false
bench = false
