[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
scrypt = { path = "../scrypt", features = ["simple"]}

[[bin]]
name = "scrypt_hash"
path = "fuzz_targets/scrypt_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scrypt_phc_verify"
path = "fuzz_targets/scrypt_phc_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scrypt_phc_hash"
path = "fuzz_targets/scrypt_phc_hash.rs"
test = false
doc = false
bench = false
