[package]
name = "password-auth"
version = "1.1.0-pre.1"
description = """
Password authentication library with a focus on simplicity and ease-of-use,
including support for Argon2, PBKDF2, and scrypt password hashing algorithms
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/password-auth"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/password-auth"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "password", "hashing"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
password-hash = { version = "0.6.0-rc.0", features = ["alloc", "rand_core"] }
rand_core = { version = "0.9", features = ["os_rng"] }

# optional dependencies
argon2 = { version = "=0.6.0-pre.1", optional = true, default-features = false, features = ["alloc", "simple"], path = "../argon2" }
pbkdf2 = { version = "=0.13.0-pre.1", optional = true, default-features = false, features = ["simple"], path = "../pbkdf2" }
scrypt = { version = "=0.12.0-pre.2", optional = true, default-features = false, features = ["simple"], path = "../scrypt" }
getrandom = { version = "0.3", optional = true, default-features = false }

[features]
default = ["argon2", "std"]
std = []
wasm_js = ["getrandom/wasm_js"]

[package.metadata.docs.rs]
all-features = true
