[package]
name = "password-auth"
version = "1.1.0-pre.3"
description = """
Password authentication library with a focus on simplicity and ease-of-use,
including support for Argon2, PBKDF2, and scrypt password hashing algorithms
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/password-auth"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/password-auth"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "password", "hashing"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
getrandom = { version = "0.3", default-features = false }
password-hash = { version = "0.6.0-rc.5", features = ["alloc", "phc"] }
phc = { version = "0.6.0-rc.0", features = ["getrandom"] }

# optional dependencies
argon2 = { version = "0.6.0-rc.4", optional = true, default-features = false, features = ["alloc", "simple"] }
pbkdf2 = { version = "0.13.0-rc.4", optional = true, default-features = false, features = ["simple"] }
scrypt = { version = "0.12.0-rc.5", optional = true, default-features = false, features = ["simple"] }

[features]
default = ["argon2", "std"]
std = []
wasm_js = ["getrandom/wasm_js"]

[package.metadata.docs.rs]
all-features = true
