[package]
name = "scrypt"
version = "0.12.0-rc.5"
description = "Scrypt password-based key derivation function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/scrypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/scrypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
edition = "2024"
rust-version = "1.85"

[dependencies]
pbkdf2 = { version = "0.13.0-rc.4", path = "../pbkdf2" }
salsa20 = { version = "0.11.0-rc.2", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
rayon = { version = "1.11", optional = true }

# optional dependencies
password-hash = { version = "0.6.0-rc.6", optional = true, default-features = false, features = ["phc"] }

[features]
default = ["password-hash", "rayon"]
alloc = ["password-hash?/alloc"]

getrandom = ["password-hash", "password-hash/getrandom"]
password-hash = ["dep:password-hash"]
rand_core = ["password-hash/rand_core"]
rayon = ["dep:rayon"]

[package.metadata.docs.rs]
all-features = true
