[package]
name = "scrypt"
version = "0.12.0-rc.7"
description = "Scrypt password-based key derivation function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/scrypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/scrypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
edition = "2024"
rust-version = "1.85"

[dependencies]
pbkdf2 = { version = "0.13.0-rc.5", path = "../pbkdf2" }
salsa20 = { version = "0.11.0-rc.2", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
rayon = { version = "1.11", optional = true }

# optional dependencies
mcf = { version = "0.6.0-rc.1", optional = true }
password-hash = { version = "0.6.0-rc.6", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false }

[features]
alloc = ["password-hash?/alloc"]

getrandom = ["password-hash", "password-hash/getrandom"]
mcf = ["alloc", "password-hash", "dep:mcf", "dep:subtle"]
phc = ["password-hash/phc"]
rand_core = ["password-hash/rand_core"]
parallel = ["dep:rayon"]

[package.metadata.docs.rs]
all-features = true
