[package]
name = "sha-crypt"
version = "0.6.0-pre.1"
description = """
Pure Rust implementation of the SHA-crypt password hash based on SHA-512
as implemented by the POSIX crypt C library
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sha-crypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/sha-crypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
sha2 = { version = "0.11.0-rc.2", default-features = false }

# optional dependencies
rand = { version = "0.9", optional = true }
subtle = { version = "2", optional = true, default-features = false }
base64ct = "1.7.1"

[features]
default = ["simple"]
simple = ["rand", "std", "subtle"]
std = []

[package.metadata.docs.rs]
all-features = true
