[package]
name = "sha-crypt"
version = "0.6.0-pre.1"
description = """
Pure Rust implementation of the SHA-crypt password hash based on SHA-512
as implemented by the POSIX crypt C library
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sha-crypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/sha-crypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
sha2 = { version = "0.11.0-rc.3", default-features = false }
base64ct = { version = "1.8", default-features = false, features = ["alloc"] }

# optional dependencies
getrandom = { version = "0.3", optional = true, default-features = false }
mcf = { version = "0.6.0-rc.0", optional = true, default-features = false, features = ["alloc", "base64"] }
subtle = { version = "2", optional = true, default-features = false }

[features]
default = ["simple"]
simple = ["dep:getrandom", "dep:mcf", "dep:subtle"]

[package.metadata.docs.rs]
all-features = true
