[package]
name = "sha-crypt"
version = "0.6.0-rc.0"
description = """
Pure Rust implementation of the SHA-crypt password hash based on SHA-512
as implemented by the POSIX crypt C library
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sha-crypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/sha-crypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
sha2 = { version = "0.11.0-rc.3", default-features = false }
base64ct = { version = "1.8", default-features = false, features = ["alloc"] }

# optional dependencies
mcf = { version = "0.6.0-rc.2", optional = true, default-features = false, features = ["alloc", "base64"] }
password-hash = { version = "0.6.0-rc.7", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false }

[features]
default = ["password-hash"]
getrandom = ["password-hash/getrandom", "password-hash"]
rand_core = ["password-hash/rand_core"]
password-hash = ["dep:mcf", "dep:password-hash", "dep:subtle"]

[package.metadata.docs.rs]
all-features = true
