[package]
name = "yescrypt"
version = "0.1.0-rc.1"
description = "Pure Rust implementation of the yescrypt password-based key derivation function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/yescrypt"
homepage = "https://github.com/RustCrypto/password-hashes/tree/master/yescrypt"
repository = "https://github.com/RustCrypto/password-hashes"
keywords = ["crypto", "hashing", "password", "phf"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
hmac = { version = "0.13.0-rc.3", default-features = false }
pbkdf2 = { version = "0.13.0-rc.5", default-features = false, features = ["hmac"] }
salsa20 = { version = "0.11.0-rc.2", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
subtle = { version = "2", default-features = false }

# optional dependencies
mcf = { version = "0.6.0-rc.1", optional = true, default-features = false, features = ["alloc", "base64"] }
password-hash = { version = "0.6.0-rc.7", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["getrandom"]
getrandom = ["password-hash", "password-hash/getrandom"]
rand_core = ["password-hash/rand_core"]
password-hash = ["dep:mcf", "dep:password-hash"]

[package.metadata.docs.rs]
all-features = true
